<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRunActivity">


    <ImageView
        android:id="@+id/distanceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_distance_icon" />


    <TextView
        android:id="@+id/distanceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_run_distance_hint"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/distanceImage"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/addRunDistanceInput"
        style="@style/blue_label.large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/add_run_distance_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/distanceTxtView"
        app:layout_constraintTop_toBottomOf="@+id/distanceTxtView" />


    <ImageView
        android:id="@+id/timeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="@+id/distanceImage"
        app:layout_constraintTop_toBottomOf="@+id/distanceImage"
        app:srcCompat="@drawable/ic_time_icon" />

    <TextView
        android:id="@+id/timeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/add_run_time_label"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/addRunDistanceInput"
        app:layout_constraintTop_toBottomOf="@+id/addRunDistanceInput" />


    <TextView
        android:id="@+id/addRunTimeLabel"
        style="@style/blue_label.large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/add_run_time_hint"
        app:layout_constraintStart_toStartOf="@+id/timeTxtView"
        app:layout_constraintTop_toBottomOf="@+id/timeTxtView" />

    <Button
        android:id="@+id/addRunSaveButton"
        style="@style/button.dark.blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/add_run_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRunTimeLabel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />
</androidx.constraintlayout.widget.ConstraintLayout>